# dreampie

./: .flake8  .gitignore  dreampie  dreampie.py  pyproject.toml  pyproject.toml.new  requirements.txt
docs/: import_updates.md  modernization_plan.md  project_reorganization.md  software_specification.md
examples/: README.md
examples/misc/: subdebug.py
scripts/: README.md
src/dreampie/: __init__.py  py2to3.py  subp_lib.py
src/dreampie/common/: brine.py  objectstream.py
src/dreampie/data/: subp_main.py
src/dreampie/gui/: SimpleGladeApp.py  __init__.py  autocomplete.py  autocomplete_window.py  autoparen.py  bug_report.py  call_tip_window.py  call_tips.py  common.py  config.py  config_dialog.py  crash_workaround.py  file_dialogs.py  folding.py  git.py  gtkexcepthook.py  hide_console_window.py  hist_persist.py  history.py  hyper_parser.py  keyhandler.py  newline_and_indent.py  odict.py  output.py  pyparse.py  selection.py  status_bar.py  subprocess_handler.py  subprocess_interact.py  tags.py  update_check.py  vadj_to_bottom.py  write_command.py
src/dreampie/subprocess/: __init__.py  find_modules.py  split_to_singles.py  trunc_traceback.py
tests/: README.md
